add star button

--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
 <body>
 	<noscript>This page requires JavaScript.</noscript>
 	<aside>
-		<h1>Instant Issues</h1>
-		<p>
-		<a href="https://github.com/instant-issues/instant-issues.github.io#readme">Learn more & contribute</a>
-		</p>
+		<div>
+			<h1><a href="https://github.com/instant-issues/instant-issues.github.io">Instant Issues</a></h1>
+			<div class=info>
+			<a class="github-button" href="https://github.com/instant-issues/instant-issues.github.io" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star instant-issues/instant-issues.github.io on GitHub">Star</a>
+			<span>by <a href="https://github.com/gittenburg">@gittenburg</a></span>
+			</div>
+		</div>
 		<div id=labels></div>
 	</aside>
 	<main>
@@ -23,6 +26,7 @@
 		</div>
 		<div id=results></div>
 	</main>
+	<script async defer src="https://buttons.github.io/buttons.js"></script>
 	<script src=script.js></script>
 </body>
 </html>
