allow searching pulls

--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
 	<main>
 		<form>
 		github.com/<input id=repo name=repo placeholder="e.g. zulip/zulip">
+
+			<small>
+				Search the titles of open
+				<select id=type>
+					<option>issues</option>
+					<option>pulls</option>
+				</select>.
+				Regex works.
+			</small>
 		</form>
 
 		<div class=form>
