make repo input bold

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	</aside>
 	<main>
 		<form>
-		github.com/<input id=repo name=repo placeholder="e.g. zulip/zulip">
+		github.com/<input id=repo name=repo placeholder="e.g. zulip/zulip" size=15>
 
 			<small>
 				Search the titles of open
