--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 	<noscript>This page requires JavaScript.</noscript>
 	<aside>
 		<div>
-			<h1><a href="https://github.com/instant-issues/instant-issues.github.io">Instant Issues</a></h1>
+			<h1><a href="/">Instant Issues</a></h1>
 			<div class=info>
 			<a class="github-button" href="https://github.com/instant-issues/instant-issues.github.io" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star instant-issues/instant-issues.github.io on GitHub">Star</a>
-			<span>by <a href="https://github.com/gittenburg">@gittenburg</a></span>
+			<a href="https://github.com/instant-issues/instant-issues.github.io">Contribute</a>
 			</div>
 		</div>
 		<div id=labels></div>
 	</aside>
 	<main>
 		<form>
-		github.com/<input id=repo name=repo placeholder="e.g. zulip/zulip" size=15>
+		github.com/<input id=repo name=repo placeholder="user/repository" size=15>
 
 			<small>
 				Search the titles of open
