--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		</form>
 
 		<div class=form>
-			<input id=search placeholder=Search... autofocus autocomplete=off>
+			<input id=search placeholder=Search... autofocus autocomplete=off class=hidden>
 		</div>
 		<div id=results></div>
 	</main>
