allow selecting multiple labels by holding shift

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 			</div>
 		</div>
 		<div id=labels></div>
+		<span id=hint>Select multiple with <kbd>Shift</kbd>.</span>
 	</aside>
 	<main>
 		<form>
