autofocus repo input on start page

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<datalist id=downstreams>
 			</datalist>
 
-		github.com/<input id=repo name=repo list=downstreams placeholder="user/repository" autocomplete=off>
+		github.com/<input id=repo name=repo list=downstreams autofocus placeholder="user/repository" autocomplete=off>
 
 			<small>
 				Search the titles of open
@@ -35,7 +35,7 @@
 		</form>
 
 		<div class=form>
-			<input id=search placeholder=Search... autofocus autocomplete=off class=hidden>
+			<input id=search placeholder=Search... autocomplete=off class=hidden>
 		</div>
 		<div id=results></div>
 	</main>
