hide label hint if not loaded

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			</div>
 		</div>
 		<div id=labels></div>
-		<span id=hint>Select multiple with <kbd>Shift</kbd>.</span>
+		<span id=hint class=if-loaded>Select multiple with <kbd>Shift</kbd>.</span>
 	</aside>
 	<main>
 		<form>
@@ -35,7 +35,7 @@
 		</form>
 
 		<div class=form>
-			<input id=search placeholder=Search... autocomplete=off class=hidden>
+			<input id=search placeholder=Search... autocomplete=off class=if-loaded>
 		</div>
 		<div id=results></div>
 	</main>
