make layout mobile-friendly

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <title>Instant Issues for GitHub</title>
 <link rel=stylesheet href=style.css>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 	<noscript>This page requires JavaScript.</noscript>
