make labels tabbable and clickable with enter

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<div class=form>
 			<input id=search placeholder=Search... autocomplete=off class=if-loaded>
 		</div>
-		<div class=labels>
+		<div id=labels>
 			<div id=selectedLabels></div>
 			<div id=suggestedLabels></div>
 		</div>
