Start using aria- attributes, make tabs focusable with Tab

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
 		github.com/<input id=repo name=repo list=downstreams autofocus placeholder="user/repository" autocomplete=off>
 		</form>
-		<div class=tabs>
-			<span class="tab active">Issues</span>
-			<span class=tab>Pulls</span>
+		<div role=tablist>
+			<span role=tab aria-selected=true tabindex=0>Issues</span>
+			<span role=tab aria-selected=false tabindex=0>Pulls</span>
 		</div>
 		</nav>
 
