--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<div id=selectedLabels></div>
 			<div id=suggestedLabels></div>
 		</div>
-		<div id=results></div>
+		<div id=results tabindex=-1></div>
 	</main>
 	<script async defer src="https://buttons.github.io/buttons.js"></script>
 	<script src=script.js></script>
