Save active tab in URL

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 		</form>
 		<a id=repoLink target=_blank><img src=/assets/external-link.svg></a>
 		<div role=tablist>
-			<span role=tab aria-selected=true aria-controls=issues tabindex=-1>Issues <span id=issueCount class=count></span></span>
-			<span role=tab aria-selected=false aria-controls=pulls tabindex=0>Pulls <span id=pullCount class=count></span></span>
+			<span id=issues-tab role=tab aria-selected=true aria-controls=issues tabindex=-1>Issues <span id=issueCount class=count></span></span>
+			<span id=pulls-tab role=tab aria-selected=false aria-controls=pulls tabindex=0>Pulls <span id=pullCount class=count></span></span>
 		</div>
 		</nav>
 
