--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<noscript>This page requires JavaScript.</noscript>
 	<main>
 		<header>
-			<h1><a href="https://github.com/instant-issues/instant-issues.github.io">Instant Issues</a></h1>
+			<h1><a href="https://github.com/instant-issues/instant-issues.github.io"><img src=/assets/logo.svg alt="Instant Issues" height=30></a></h1>
 			<a class="github-button" href="https://github.com/instant-issues/instant-issues.github.io" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star instant-issues/instant-issues.github.io on GitHub">Star</a>
 		</header>
 		<nav>
