Improve tab design, add labels popover

--- a/index.html
+++ b/index.html
@@ -30,10 +30,14 @@
 		<div class=form>
 			<input id=search placeholder=Search... autocomplete=off class=if-loaded>
 		</div>
-		<div id=labels>
-			<div id=selectedLabels></div>
-			<div id=suggestedLabels></div>
+		<div id=labelBar>
+			<div id=labelPills>
+				<div id=selectedLabels></div>
+				<div id=suggestedLabels></div>
+			</div>
+			<span id=toggle-labels role=checkbox aria-checked=false tabindex=0>Labels</span>
 		</div>
+		<div id=labels hidden></div>
 		<div id=results tabindex=-1>
 			<div role=tabpanel id=issues></div>
 			<div role=tabpanel id=pulls hidden></div>
