--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 				<div id=selectedLabels></div>
 				<div id=suggestedLabels></div>
 			</div>
-			<span id=toggle-labels role=checkbox aria-checked=false tabindex=0>Labels</span>
+			<span id=only-prioritized role=checkbox aria-checked=false tabindex=0 title="Only show prioritized issues">Prioritized</span>
+			<span id=toggle-labels role=checkbox aria-checked=false tabindex=0 title="Show label picker">Labels</span>
 		</div>
 		<div id=labels hidden></div>
 		<div id=results tabindex=-1>
