Move variable declarations closer to usages.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<datalist id=downstreams>
 			</datalist>
 
-		github.com/<input id=repo name=repo list=downstreams autofocus placeholder="user/repository" autocomplete=off>
+		github.com/<input id=repoInput name=repo list=downstreams autofocus placeholder="user/repository" autocomplete=off>
 		</form>
 		<a id=repoLink target=_blank hidden><img src=/assets/external-link.svg></a>
 		<div id=tablist role=tablist hidden>
@@ -28,7 +28,7 @@
 		</div>
 		</nav>
 
-		<input id=search placeholder=Search... autocomplete=off hidden>
+		<input id=searchInput placeholder=Search... autocomplete=off hidden>
 		<div id=labelBar hidden>
 			<div id=labelPills>
 				<div id=selectedLabels></div>
