refactor: Extract selectLabel() method.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		</header>
 		<nav>
 		<form>
-			<datalist id=downstreams>
+			<datalist id=downstreamDatalist>
 			</datalist>
 
 		github.com/<input id=repoInput name=repo list=downstreams autofocus placeholder="user/repository" autocomplete=off>
