refactor: Rename labelContainer to labelPopover.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			</div>
 			<span id=toggle-labels role=checkbox aria-checked=false tabindex=0 title="Show label picker">Labels</span>
 		</div>
-		<div id=labels hidden></div>
+		<div id=labelPopover hidden></div>
 		<div id=results tabindex=-1>
 			<div role=tabpanel id=issues hidden></div>
 			<div role=tabpanel id=pulls hidden></div>
