Fix list attribute.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<datalist id=downstreamDatalist>
 			</datalist>
 
-		github.com/<input id=repoInput name=repo list=downstreams autofocus placeholder="user/repository" autocomplete=off>
+		github.com/<input id=repoInput name=repo list=downstreamDatalist autofocus placeholder="user/repository" autocomplete=off>
 		</form>
 		<a id=repoLink target=_blank hidden><img src=/assets/external-link.svg></a>
 		<div id=tablist role=tablist hidden>
