Show number of prioritized issues as badge in tab.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<div id=tablist role=tablist hidden>
 			<span id=issues-tab role=tab aria-selected=false aria-controls=issues tabindex=0>Issues <span id=issueCount class=count></span></span>
 			<span id=pulls-tab role=tab aria-selected=false aria-controls=pulls tabindex=0>Pulls <span id=pullCount class=count></span></span>
-			<span id=triage-tab role=tab aria-selected=false aria-controls=triage tabindex=0>Triage</span>
+			<span id=triage-tab role=tab aria-selected=false aria-controls=triage tabindex=0>Triage <span id=triageCount class=count></span></span>
 		</div>
 		</nav>
 
